# resume_test

./: .gitignore  config.yaml  packages.txt  pyproject.toml  requirements.txt  sample.docx  streamlit_app.py
.streamlit/: config.toml
html_templates/: resume.html
src/resume_tailor/: __init__.py  __main__.py  cli.py  config.py
src/resume_tailor/cache/: company_cache.py
src/resume_tailor/clients/: llm_client.py  search_client.py
src/resume_tailor/export/: __init__.py  base.html  pdf_fallback.py  pdf_renderer.py
src/resume_tailor/logging/: cost_calculator.py  models.py  usage_store.py
src/resume_tailor/models/: __init__.py  company.py  interview.py  job.py  qa.py  refinement.py  resume.py  strategy.py
src/resume_tailor/parsers/: form_parser.py  jd_image_parser.py  jd_parser.py  resume_parser.py
src/resume_tailor/pipeline/: form_autofill.py  (+8 more)
templates/: korean_business.yaml  korean_developer.yaml  korean_standard.yaml  sample_template.docx
test_data/: my_resume.txt  stripe_jd.txt
tests/: conftest.py  test_cache.py  test_config.py  test_config_validation.py  test_cost_calculator.py  test_docx_renderer_detail.py  test_form_parser.py  test_hwpx_filler.py  test_json_parser.py  test_logging.py  test_models.py  test_parsers.py  test_pdf_renderer.py  test_resume_quality.py  test_sentence_refiner.py  test_smart_filler.py  test_templates.py  test_url_validator.py
tests/fixtures/: sample_jd.txt
tests/test_clients/: test_llm_client.py  test_search_client.py
tests/test_pipeline/: test_agents.py  test_form_autofill.py  test_form_filler.py  test_orchestrator.py
(+11 files in other folders)
